add container simple signing type
